<resources>
    <string name="app_name">Diashop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Not signed in</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_wish_list">Wish list</string>
    <string name="menu_account">Account</string>
    <string name="menu_home">Home</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="level_text">Level %1$d</string>
    <!-- -
    This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
    For more information, see https://support.google.com/admob/answer/3052638
<!- -->
    <string name="interstitial_ad_unit_id">YOUR_INTERSTITIAL_AD_UNIT_ID</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_registered_email">Enter your registered email</string>
    <string name="email">Email</string>
    <string name="reset">Reset</string>
    <string name="back">Back</string>
    <string name="check_email">Check your email for password reset link</string>
    <string name="open">Open</string>
    <string name="no_gmail_app">You don\'t have email app installed</string>
    <string name="full_name">Full name</string>
    <string name="password_hint">Password (at least 8 characters)</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="email_pattern_regex">[a-zA-Z0-9._-]+@[a-z]+.[a-z]+</string>
    <string name="ratings">Ratings</string>
    <string name="rating">ratings</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="your_rating">Your rating</string>
    <string name="product_image">Product Image</string>
    <string name="title">Title</string>
    <string name="alert_title">Open external app?</string>
    <string name="category">Category</string>
    <string name="view_all">View All</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="or">OR</string>
    <string name="empty">Empty</string>
    <string name="remove_from_wishlist">remove from wishlist</string>
    <string name="add_to_wish_list">Add to wish list</string>
    <string name="about">About</string>
    <string name="buy">Buy</string>
    <string name="offers">Offers</string>
    <string name="visit">Visit</string>
    <string name="profile_image">Profile Image</string>
    <string name="points">Points</string>
    <string name="earn_points">Earn Points</string>
    <string name="invite_friend">Invite your friend and you both earn points.</string>
    <string name="invite">Invite</string>
    <string name="redeem_points">Redeem Points</string>
    <string name="invite_code">Invite Code</string>
    <string name="redeem">Redeem</string>
    <string name="sign_out">Sign out</string>
    <string name="coupon">Coupon</string>
    <string name="text_copied">Text Copied Successfully</string>
    <string name="points_redeem_success">Points redeemed 💰</string>
    <string name="point_redeem_fail">Couldn\'t redeem points 😥</string>
    <string name="no_ratings">No ratings</string>
    <string name="added_wishlist">Added to wish list! ♥️</string>
    <string name="removed_wishlist">Removed from wish list! 💔</string>
    <string name="incorrect_email">Incorrect Email</string>
    <string name="accept">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="supporting_text">Product will be opened in an external app.</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"
    </string>
    <string name="invalid_link">Invalid Link</string>
    <string name="wish_list">Wish List</string>
</resources>