<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_round_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/menu_wish_list" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_account" />

    </group>
<!--    <item-->
<!--        android:id="@+id/nav_sign_out"-->
<!--        android:icon="@drawable/ic_baseline_signout_24"-->
<!--        android:title="@string/sign_out" />-->
<!--    <item-->
<!--        android:title="@string/menu_share"-->
<!--        android:id="@+id/main_share"-->
<!--        android:icon="@drawable/ic_baseline_share_24"/>-->
</menu>