<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.thepanshu.diakart.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_productsListFragment"
            app:destination="@id/productsListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_nav_home_to_productDetailFragment"
            app:destination="@id/productDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_wishlist"
        android:name="com.thepanshu.diakart.ui.wishlist.WishListFragment"
        android:label="@string/menu_wish_list"
        tools:layout="@layout/fragment_wishlist" >
        <action
            android:id="@+id/action_nav_wishlist_to_productDetailFragment"
            app:destination="@id/productDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_account"
        android:name="com.thepanshu.diakart.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/account_fragment" />
    <fragment
        android:id="@+id/productsListFragment"
        android:name="com.thepanshu.diakart.ui.products_list.ProductsListFragment"
        android:label="Products"
        tools:layout="@layout/fragment_products_list" >
        <action
            android:id="@+id/action_productsListFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.thepanshu.diakart.ui.ProductDetailFragment"
        android:label="Item"
        tools:layout="@layout/fragment_product_detail" />
</navigation>